Foi adicionado a funcionalidade de click no menu do site

--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ header, .navbar{
 
     /* cta */
 
-    #call-area p., #call-area #call-btn {
+    #call-area p, #call-area #call-btn {
         font-size: 14px;
         letter-spacing: 0;
         margin: 0;
